add comments and make code clean and more readable